<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:scrollbars="vertical"
    tools:context=".activities.AddNote.AddNoteActivity">

    <TextView
        android:id="@+id/labelHeading"
        style="@style/AppTheme.FormLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/editHeading"
        android:text="@string/labelHeading" />

    <EditText
        android:id="@+id/editHeading"
        style="@style/AppTheme.FormControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="text" />

    <TextView
        android:id="@+id/labelText"
        style="@style/AppTheme.FormLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/editNoteText"
        android:text="@string/labelText" />

    <EditText
        android:id="@+id/editNoteText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="textMultiLine"
        android:lines="10"
        android:maxLines="20"
        android:minLines="2"
        android:scrollbars="vertical" />

    <CheckBox
        android:id="@+id/checkboxAddNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:onClick="checkboxAddNotification_onClick"
        android:text="@string/checkboxAddNotification" />

    <TextView
        android:id="@+id/labelNotifyDate"
        style="@style/AppTheme.FormLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/editDate"
        android:text="@string/labelNotifyDate"
        android:visibility="gone" />

    <EditText
        android:id="@+id/editDate"
        style="@style/AppTheme.FormControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:focusable="false"
        android:hint="dd/MM/yyyy"
        android:inputType="date"
        android:visibility="gone" />

    <TextView
        android:id="@+id/labelNotifyTime"
        style="@style/AppTheme.FormLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/editTime"
        android:text="@string/labelNotifyTime"
        android:visibility="gone" />

    <EditText
        android:id="@+id/editTime"
        style="@style/AppTheme.FormControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:focusable="false"
        android:hint="HH:mm"
        android:inputType="time"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="btnCancel_onClick"
            android:text="@string/btnCancel"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnAddNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="btnAddNote_onClick"
            android:text="@string/btnAddNote"
            android:textAllCaps="false" />

    </LinearLayout>

</LinearLayout>