<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".activities.EditNote.EditNoteActivity">

    <TextView
        android:id="@+id/labelNoteId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/labelCreatedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/labelHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/editHeading"
        android:text="@string/labelHeading" />

    <EditText
        android:id="@+id/editHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="text" />

    <TextView
        android:id="@+id/labelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/editNoteText"
        android:text="@string/labelText" />

    <EditText
        android:id="@+id/editNoteText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="10"
        android:maxLines="20"
        android:minLines="2"
        android:scrollbars="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="btnCancel_onClick"
            android:text="@string/btnCancel"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnEditNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="btnEditNote_onClick"
            android:text="@string/btnEditNote"
            android:textAllCaps="false" />

    </LinearLayout>

</LinearLayout>